# internal/models/password.go
@@ -5,3 +5,7 @@ type Password struct {
 	ConfirmPassword string `json:"confirm_password" binding:"required"`
 	OldPassword     string `json:"old_password" binding:"required"`
 }
+
+type PassReset struct {
+	Email string `json:"email" binding:"required"`
+}
